--- a/style.css
+++ b/style.css
@@ -343,6 +343,20 @@ h1 {
 }
 
 
+#preloader{
+position:fixed;
+top:0;
+left:0;
+width:100vw;
+height:100vh;
+background:rgba(0,0,0,0.85);
+display:flex;
+flex-direction:column;
+align-items:center;
+justify-content:center;
+z-index:9999;
+}
+
 
 
 #preloaderSpinner {
