--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 
 .container {
   text-align: center;
-  background-color: black;
+  background-color: white;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -197,7 +197,7 @@ h1 {
 #scheduleContainer {
   margin-top: 20px;
   text-align: center;
-  background-color: #ffffff;
+  background-color: black;
   padding: 15px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
